Remove unused code

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                         </select>
                     </div>
 
+                    <!-- List of scopes to apply to snippet -->
                     <div class="form-group scope-select">
                         <label class="text-white" for="code_scope">Scope/Source</label>
                         <select id="code-scope" name="code_scope" class="form-control custom-select" required>
@@ -216,6 +217,7 @@
                         </select>
                     </div>
 
+                    <!-- List of scopes to apply to snippet -->
                     <div class="form-group scope-select">
                         <label class="text-white" for="scope_from">Scope/Source</label>
                         <select class="form-control custom-select" name="scope_from">
